stderr
Hiker.java:9: error: ')' expected
        if(Array.equals(hand, aaa){
                                  ^
1 error
